--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,15 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width," initial scale="1.0">
-        <title>My Portfolio</title>
+        <title>My First Portfolio</title>
+        <ul>
+            <li><a href="index.html">Go to My First Portfolio</a></li>
+        </ul>
     </head>
     <body>
-        <h1>Welcome to My Portfolio</h1>
-        <a href="index.html">Go to My First Portfolio</a>
+        <article>
+            <h1>Welcome to My Portfolio</h1>
+            <a href="index.html">Go to My First Portfolio</a>
 
-        <p>This is the first paragraph of my portfolio</p>
-        <p>Here are some fun tweets!</p>
-        <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Step-1 : Learn HTML<br>Step-2 : Learn CSS<br>Step-3 : Learn JavaScript<br>Step-4 : Learn React/Vue/Angular<br>Step-5 : Learn NodeJs<br>Step-6 : Learn SQL<br>Step-7 : Learn NoSQL<br>Step-8 : Go back to step 3<br><br>🏆 Congratulation you&#39;re full stack developer</p>&mdash; Wise (@trikcode) <a href="https://twitter.com/trikcode/status/1832461663712190635?ref_src=twsrc%5Etfw">September 7, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-       
+            <p>This is the first paragraph of my portfolio</p>
+            <p>Here are some fun tweets!</p>
+            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Step-1 : Learn HTML<br>Step-2 : Learn CSS<br>Step-3 : Learn JavaScript<br>Step-4 : Learn React/Vue/Angular<br>Step-5 : Learn NodeJs<br>Step-6 : Learn SQL<br>Step-7 : Learn NoSQL<br>Step-8 : Go back to step 3<br><br>🏆 Congratulation you&#39;re full stack developer</p>&mdash; Wise (@trikcode) <a href="https://twitter.com/trikcode/status/1832461663712190635?ref_src=twsrc%5Etfw">September 7, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+         </article> 
+         <aside>
+            Placehoder to add comment thread later.
+         </aside>
     </body>
 </html>
