--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,19 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width," initial scale="1.0">
-        <title>My Portfolio</title>
+        <title>My First Portfolio</title>
+        <nav>
+            <ul>
+                <li><a href="tweets.html">Go to My First Portfolio</a></li>
+            </ul>
+        </nav>
+
     </head>
-    <body>
-        <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Portfolio</title>
-</head>
+   
 <body>
+    <article>
     <!-- Main heading -->
     <h1>Welcome to My First Portfolio</h1>
+    <a href="tweets.html">Go to My First Portfolio</a>
     
     <!-- Subheading level 2 -->
     <h2>About Me</h2>
@@ -35,9 +36,12 @@
     <a href="https://www.example.com" target="_blank">
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Portfolio Logo" width="300">
     </a>
+</article>
+<aside>
+    Placehoder to add comment thread later.
+</aside>
 
 </body>
 </html>
 
-    </body>
-</html>
+    
