--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width," initial scale="1.0">
         <title>My First Portfolio</title>
-        <ul>
-            <li><a href="index.html">Go to My First Portfolio</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="index.html">Go to My First Portfolio</a></li>
+            </ul>
+        </nav>
     </head>
     <body>
         <article>
@@ -21,4 +23,7 @@
             Placehoder to add comment thread later.
          </aside>
     </body>
+    <footer>
+        Made by Cheptoo Sheila - <a href="https://accounts.google.com/SignOutOptions?hl=en&continue=https://mail.google.com/mail&service=mail&ec=GBRAFw" target="_blank">Here</a>
+    </footer>
 </html>
