Giving similar structure to index.html and tweets.html

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -4,13 +4,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width," initial scale="1.0">
         <title>My First Portfolio</title>
-        <nav>
-            <ul>
-                <li><a href="index.html">Go to My First Portfolio</a></li>
-            </ul>
-        </nav>
+        
     </head>
-    <body>
+    <body> 
+         <!-- Navigation -->
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+
+    <!-- Main content-->
+     <main>
         <article>
             <h1>Welcome to My Portfolio</h1>
             <a href="index.html">Go to My First Portfolio</a>
@@ -22,8 +28,10 @@
          <aside>
             Placehoder to add comment thread later.
          </aside>
-    </body>
+     </main>
+    <!-- Footer -->
     <footer>
         Made by Cheptoo Sheila - <a href="https://accounts.google.com/SignOutOptions?hl=en&continue=https://mail.google.com/mail&service=mail&ec=GBRAFw" target="_blank">Here</a>
     </footer>
+    </body>
 </html>
